k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: rabbit
spec:
  replicas: 1
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      volumes:
        - name: rabbitmq-data
          hostPath:
            path: /run/desktop/mnt/host/c/Users/h9701/mounted/rabbitmq
            type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbit
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30000
---

apiVersion: v1
kind: Service
metadata:
  namespace: rabbit
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    - port: 5672
      name: amqp
      targetPort: 5672
    - port: 4369
      name: epmd
    - port: 25672
      name: rabbitmq-dist
  selector:
    app: rabbitmq
  type: ClusterIP
