k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naver
spec:
  type: ClusterIP
  selector:
    app: naver
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 80
